Added New Blog Post In MetaData #1

--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,13 @@
                 date: "2026-01-02",
                 description: "A reflection on my path in software development, the challenges I've faced, and lessons learned along the way.",
                 slug: "my-journey-as-developer"
-            }
+            },
+            {
+                 title: "What Is Git & GitHub? Who Created It and How Can You Learn It",
+                 date: "2025-02-03",
+                 description: "A complete beginner-friendly guide to Git and GitHub — their origin story, why they exist, how they work, and how anyone can start learning them step by step.",
+                 slug: "beginner-guide-git-github"
+            },
         ];
 
         // Generate JSON-LD structured data for blog
